[package]
name = "qpm-rust"
version = "0.1.0"
authors = [
    "Adam ? <adamznow@gmail.com>",
    "RedBrumbler <redbrumbler.official@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
pubgrub = "0.2.1"
owo-colors = "3"
atomic_refcell = "0.1.8"
dirs = "4.0.0"
keyring = "1"
duct = "0.13.5"
zip = "0.6"
remove_dir_all = "0.7.0"
walkdir = "2.3.2"
symlink = "0.1.0"
fs_extra = "1.2.0"

[profile.release]
opt-level = 3
lto = true